@startuml autobill-service-class-diagram

!theme plain
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam linetype ortho

title autobill-service - Class Diagram

' ============================================
' ENUMS
' ============================================
enum AccountStatus {
    ACTIVE
    DEACTIVATED
}

enum FriendStatus {
    PENDING
    ACCEPTED
    REJECTED
}

enum GroupRole {
    OWNER
    ADMIN
    MEMBER
}

enum SplitType {
    GROUP
    DIRECT
}

enum SplitDivisionType {
    EQUAL
    CUSTOM
}

enum Currency {
    INR
    USD
    EUR
}

' ============================================
' BASE MODEL
' ============================================
class BaseModel {
    -Id: UUID
    -CreatedAt: time.Time
    -UpdatedAt: time.Time
    -DeletedAt: gorm.DeletedAt
}

' ============================================
' DOMAIN ENTITIES
' ============================================
class User {
    -Email: string
    -Name: string
    -Status: AccountStatus
}

class Credential {
    -UserID: UUID
    -PasswordHash: string
}

class RefreshToken {
    -UserID: UUID
    -Token: string
    -ExpiresAt: time.Time
    -Revoked: bool
}

class FriendRequest {
    -SenderId: UUID
    -ReceiverId: UUID
    -Status: FriendStatus
    -IdempotencyKey: *string
}

class Friendship {
    -UserID: UUID
    -FriendID: UUID
}

class Group {
    -Name: string
    -OwnerID: UUID
    -SimplifyDebts: bool
}

class GroupMembership {
    -UserID: UUID
    -GroupID: UUID
    -Role: GroupRole
}

class Split {
    -Type: SplitType
    -DivisionType: SplitDivisionType
    -TotalAmount: int64
    -Currency: Currency
    -Description: string
    -SimplifyDebts: *bool
    -IdempotencyKey: *string
    -GroupID: *UUID
    -CreatedByID: UUID
}

class SplitParticipant {
    -SplitID: UUID
    -UserID: UUID
    -SettledAmount: int64
    -ShareAmount: int64
    -Currency: Currency
    -IsSettled: bool
}

class Settlement {
    -SplitID: UUID
    -PayerID: UUID
    -PayeeID: UUID
    -Amount: int64
    -Currency: Currency
    -Confirmed: bool
    -Date: time.Time
    -IdempotencyKey: *string
}

class UserBalance {
    -UserID: UUID
    -OtherUserID: UUID
    -NetAmount: int64
    -Currency: Currency
}

class GroupBalance {
    -UserID: UUID
    -GroupID: UUID
    -NetAmount: int64
    -Currency: Currency
}

' ============================================
' SCHEMA CONSTRAINT NOTES
' ============================================
note right of User
    PK: id
    UK: email
end note

note right of Credential
    PK: id
    UK: user_id
    FK: user_id -> users.id
end note

note right of RefreshToken
    PK: id
    UK: token
    FK: user_id -> users.id (CASCADE)
end note

note right of Friendship
    PK: id
    UK: (user_id, friend_id)
    FK: user_id -> users.id (CASCADE)
    FK: friend_id -> users.id (CASCADE)
end note

note right of FriendRequest
    PK: id
    UK: idempotency_key
    FK: sender_id -> users.id (CASCADE)
    FK: receiver_id -> users.id (CASCADE)
end note

note right of GroupMembership
    PK: id
    UK: (user_id, group_id)
    FK: user_id -> users.id (CASCADE)
    FK: group_id -> groups.id (CASCADE)
end note

note right of Split
    PK: id
    UK: idempotency_key
    FK: created_by_id -> users.id (CASCADE)
    FK: group_id -> groups.id (SET NULL)
end note

note right of SplitParticipant
    PK: id
    UK: (split_id, user_id)
    FK: split_id -> splits.id (CASCADE)
    FK: user_id -> users.id (CASCADE)
end note

note right of Settlement
    PK: id
    UK: idempotency_key
    FK: split_id -> splits.id (CASCADE)
    FK: payer_id -> users.id (CASCADE)
    FK: payee_id -> users.id (CASCADE)
end note

note right of UserBalance
    PK: id
    FK: user_id -> users.id (CASCADE)
    FK: other_user_id -> users.id (CASCADE)
end note

note right of GroupBalance
    PK: id
    FK: user_id -> users.id (CASCADE)
    FK: group_id -> groups.id (CASCADE)
end note

' ============================================
' RELATIONSHIPS
' ============================================

' Base model embedding
BaseModel <|-- User
BaseModel <|-- Credential
BaseModel <|-- RefreshToken
BaseModel <|-- FriendRequest
BaseModel <|-- Friendship
BaseModel <|-- Group
BaseModel <|-- GroupMembership
BaseModel <|-- Split
BaseModel <|-- SplitParticipant
BaseModel <|-- Settlement
BaseModel <|-- UserBalance
BaseModel <|-- GroupBalance

' User relationships
User "1" -- "0..1" Credential : user_id
User "1" -- "0..*" RefreshToken : user_id
User "1" -- "0..*" FriendRequest : sender_id
User "1" -- "0..*" FriendRequest : receiver_id
User "1" -- "0..*" Friendship : user_id
User "1" -- "0..*" Friendship : friend_id
User "1" -- "0..*" GroupMembership : user_id
User "1" -- "0..*" Group : owner_id
User "1" -- "0..*" SplitParticipant : user_id
User "1" -- "0..*" Split : created_by_id
User "1" -- "0..*" Settlement : payer_id
User "1" -- "0..*" Settlement : payee_id
User "1" -- "0..*" UserBalance : user_id
User "1" -- "0..*" UserBalance : other_user_id
User "1" -- "0..*" GroupBalance : user_id

' Group relationships
Group "1" -- "0..*" GroupMembership : group_id
Group "1" -- "0..*" GroupBalance : group_id
Group "0..1" -- "0..*" Split : group_id

' Split relationships
Split "1" -- "0..*" SplitParticipant : split_id
Split "1" -- "0..*" Settlement : split_id

' Enum usage
User ..> AccountStatus : uses
FriendRequest ..> FriendStatus : uses
GroupMembership ..> GroupRole : uses
Split ..> SplitType : uses
Split ..> SplitDivisionType : uses
Split ..> Currency : uses
SplitParticipant ..> Currency : uses
Settlement ..> Currency : uses
UserBalance ..> Currency : uses
GroupBalance ..> Currency : uses

@enduml
